--- a/Templates/inicio.html
+++ b/Templates/inicio.html
@@ -31,7 +31,7 @@
       <a href="/login" class="h1"><b>Proyecto</b>final</a>
     </div>
     <div class="card-body">
-      <p class="login-box-msg">Inicio de sesion</p>
+      <p class="login-box-msg">Inicio de sesión</p>
     
       <form action="/login" method="post">
         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
