--- a/Templates/partials/_navbar.html
+++ b/Templates/partials/_navbar.html
@@ -1,7 +1,7 @@
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
 
   <a href="/" class="brand-link">
-    <span class="brand-text font-weight-light">Inteligenci artificial</span>
+    <span class="brand-text font-weight-light">Inteligencia Artificial </span>
   </a>
 
 
