Signed-off-by: unknown <mig.garzon@udla.edu.co>

--- a/Templates/index3.html
+++ b/Templates/index3.html
@@ -139,13 +139,6 @@
               </div>
 
             </div>
-
-
-
-
-
-
-
             <div class="row">
 
               <div class="card-body">
@@ -206,7 +199,7 @@
 
                           </td>
                           <td>
-                            <form action="/individual" method="POST">
+                            <form action="/Datos_pregunta" method="POST">
                               <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
 
                               <input type="hidden" class="form-control" placeholder="Full name" name="ver">
@@ -298,9 +291,6 @@
               </div>
 
             </div>
-
-
-
           </div>
 
         </div>
