--- a/Templates/index3.html
+++ b/Templates/index3.html
@@ -144,21 +144,20 @@
               <div class="card-body">
                 <div class="row justify-content-between">
                   <div class="col-1">
-                   
-                      <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
 
-                      <input type="hidden" value={{informe}} class="form-control" placeholder="Full name"
-                              name="abandono">
-                      <input type="submit" value="Posible Abandono" class="btn btn-secondary">
-                    
+                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+
+                    <input type="hidden" value={{informe}} class="form-control" placeholder="Full name" name="abandono">
+                    <input type="submit" value="Posible Abandono" class="btn btn-secondary">
+
                   </div>
                   <div class="col-8">
-                  
-                      <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
 
-                      <input type="hidden" value="graduado" class="form-control" placeholder="Full name" name="g">
-                      <input type="submit" value="Posible graduado" class="btn btn-success">
-                   
+                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+
+                    <input type="hidden" value="graduado" class="form-control" placeholder="Full name" name="g">
+                    <input type="submit" value="Posible graduado" class="btn btn-success">
+
                   </div>
 
                 </div>
@@ -185,7 +184,7 @@
 
 
                           <td>
-                            
+
                             {% if data.prediccion ==0%}
                             <div class="alert alert-secondary" role="alert">
                               Abandono
@@ -202,7 +201,8 @@
                             <form action="/Datos_pregunta" method="POST">
                               <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
 
-                              <input type="hidden" class="form-control" placeholder="Full name" name="ver">
+                              <input type="hidden" value={{data.id}} class="form-control" placeholder="Full name"
+                                name="ver">
                               <input type="submit" value=ver class="btn btn-success">
 
                             </form>
@@ -252,36 +252,33 @@
 
                             <th style="width: 10x">Cantidad de estudiantes</th>
                           </tr>
-                        </thead>
-                        <tbody>
-                          <tr>
-                            {% for datoscarrea in datoscarrea %}
+                          {% for datoscarrea in datoscarrea %}
 
-                            <td>
-                              <div class="alert alert-info" role="alert">
-                                {{datoscarrea.id}}
-                              </div>
+                          <td>
+                            <div class="alert alert-info" role="alert">
+                              {{datoscarrea.id}}
+                            </div>
 
-                            </td>
+                          </td>
 
-                            <td>
-                              <div class="alert alert-info" role="alert">
+                          <td>
+                            <div class="alert alert-info" role="alert">
 
-                                {{datoscarrea.nombre}}
+                              {{datoscarrea.nombre}}
 
-                              </div>
-                            </td>
+                            </div>
+                          </td>
 
-                            <td>
-                              <div class="alert alert-danger" role="alert">
-                                {{datoscarrea.cantidad}}
-                              </div>
-                            </td>
+                          <td>
+                            <div class="alert alert-danger" role="alert">
+                              {{datoscarrea.cantidad}}
+                            </div>
+                          </td>
                           </tr>
                           <tr>
                             {%endfor%}
 
-                        </tbody>
+                            </tbody>
                       </table>
 
                     </div>
@@ -289,6 +286,8 @@
                   </div>
                 </div>
               </div>
+             
+
 
             </div>
           </div>
@@ -391,9 +390,9 @@
 
 
     })
-    $(document).ready( function () {
+    $(document).ready(function () {
       $('#myTable').DataTable();
-  } );
+    });
   </script>
 
 </body>
